<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/ImagenPortada"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:srcCompat="@drawable/whatsapp_image_2023_03_10_at_10_41_22_am"
        android:contentDescription="@string/Desc_Imagen_1" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sucursales"
        android:textSize="@dimen/standarTextSize"
        android:padding="10dp"
        android:layout_below="@id/ImagenPortada" />

    <TextView
        android:id="@+id/contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        android:textSize="@dimen/standarTextSize"
        android:padding="10dp"
        android:layout_below="@id/textview_first" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contacto">


        <RadioButton
            android:id="@+id/rbtnTEL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="495 956 16635"
            android:textSize="@dimen/standarTextSize"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/rbtnTEL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="495 956 7228"
            android:textSize="@dimen/standarTextSize"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/rbtnTEL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="449 320 6501"
            android:textSize="@dimen/standarTextSize"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_llamar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"

        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />


</RelativeLayout>